# XLSXExtractor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/files/: XLSXWorker.cpp
src/headers/: XLSXWorker.h
